syntax = "proto3";

package ai_engine.v1;

option go_package = "neuralops/api/proto/ai_engine/v1;ai_enginev1";

message PipelinePlan {
  string id = 1;
  string description = 2;
  repeated Task tasks = 3;
}

message Task {
  string name = 1;
  string description = 2;
  string type = 3;
  repeated string depends_on = 4;
  map<string, string> config = 5;
}
